2004-06-22  Jan Nieuwenhuizen  <janneke@gnu.org>

	* debian/: Apply Debian patch (Anthony Fok).

	* debian/GNUmakefile (EXTRA_DIST_FILES): 
	(CONF_FILES): Update.

2004-06-21  Jan Nieuwenhuizen  <janneke@gnu.org>

	* debian/: Remove cruft (requested Anthony Fok.)

2004-06-20  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* po/tr.po: turkish translation.

2004-06-19  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* scripts/lilypond.py (make_include_option): set lilypond_error_p.

	* lily/bar-line.cc (compound_barline): backport ||: fix.

2004-06-12  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* ly/engraver-init.ly (AncientRemoveEmptyStaffContext): remove
	override for Beam::position-callbacks in grace.  Fixes:
	weird-stem-size-grace

2004-06-11  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/accidental-engraver.cc (number_accidentals_from_sig):
	backport additional fixes.

2004-06-07  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* scripts/lilypond-book.py (latex_filter_cmd): Use a temporary
	file since 'latex "\\nonstopmode \input /dev/stdin"' doesn't work
	in Cygwin. Warning: ugly hard coded file name used.

2004-06-04  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* Documentation/user/notation.itely (Instrument transpositions):
	Correct the name of the instrumentTransposition property.

2004-06-03  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* scripts/lilypond-book.py (output): Bug fix so preLilyPondExample
	and postLilyPondExample are called when defined.

2004-06-01  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/accidental-engraver.cc (update_local_key_signature): fold
	repetitive code.
	(number_accidentals_from_sig): backport code from 2.3. Fixes:
	custom-key-signatures.ly

2004-05-31  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* VERSION: 2.2.2

	* lily/tie-performer.cc (stop_translation_timestep): reset
	ties_created_. Fixes bugs/midi-tie.ly,
	bugs/midi-lyrics-barcheck.ly
	
	* scm/define-grobs.scm (all-grob-descriptions): remove
	break-visibility. Should fix: bugs/piano-repeat.ly
